--- a/css/style.css
+++ b/css/style.css
@@ -412,6 +412,68 @@ img {
   display: table;
   clear: both; }
 
+.header {
+  background: url("../img/bg.jpg") no-repeat;
+  background-size: cover;
+  min-height: 813px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .header h1 {
+    margin: 230px auto 55px;
+    width: 708px;
+    font-family: Exo-Thin, Arial, sans-serif;
+    font-size: 60px;
+    text-align: center;
+    line-height: 75px; }
+
+.header__play {
+  width: 59px;
+  height: 59px;
+  background: url(../img/play.png) no-repeat;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 40px; }
+
+.header__play:hover {
+  background: url(../img/play-hover.png) no-repeat; }
+
+.header__try {
+  position: relative;
+  cursor: pointer;
+  width: 190px;
+  height: 50px;
+  background-color: #ff6d6d;
+  border: none;
+  color: white;
+  text-transform: uppercase;
+  font-family: Exo-Regular, Arial, sans-serif;
+  font-size: 16px; }
+
+.header__try:hover {
+  background-color: #ff454a; }
+
+.header__try::before {
+  width: 210px;
+  position: absolute;
+  content: '* No need to add cards details';
+  font-family: Exo-Regular, Arial, sans-serif;
+  font-size: 14px;
+  color: #282828;
+  text-transform: none;
+  top: 60px;
+  left: -19px; }
+
 .instagram__title {
   text-align: center;
   font-family: rufina-bold-webfont, Arial, sans-serif;
@@ -485,223 +547,34 @@ input[type='range']::-webkit-slider-thumb {
   background: url("../img/inst13.jpg") no-repeat;
   background-size: cover; }
 
-.about {
-  margin-left: 120px;
-  margin-top: 214px;
-  max-width: 321px; }
-
-.about__me {
-  max-width: 321px; }
-  .about__me img {
-    margin-bottom: 30px; }
-  .about__me h3 {
-    font-family: rufina-bold-webfont, Arial, sans-serif;
-    font-size: 36px; }
-  .about__me p {
-    font-size: 13px;
-    line-height: 24px;
-    color: #707070; }
-
-.about__span-me {
-  font-size: 13px;
-  color: #898989;
-  position: relative;
-  display: block; }
-
-.about__span-me::before {
-  content: '';
-  position: absolute;
-  width: 81px;
-  height: 2px;
-  background-color: #c4c4c4;
-  top: 14px;
-  left: 0; }
-
-.about__social-links {
-  position: relative; }
-  .about__social-links li {
-    display: inline-block;
-    margin-left: 10px; }
-
-.about__social-links::after {
-  content: 'Follow';
-  position: absolute;
-  top: 5px;
-  left: 0;
-  font-size: 13px;
-  color: #898989; }
-
-.about__subscribe {
-  margin-top: 60px;
-  background-color: #f5f5f5;
-  padding: 60px 19px 45px;
-  max-width: 321px; }
-  .about__subscribe h4 {
-    font-family: rufina-bold-webfont, Arial, sans-serif;
-    font-size: 18px; }
-  .about__subscribe input {
-    max-width: 169px;
-    height: 36px;
-    background-color: #f5f5f5;
-    border: 1px solid #dfdfdf;
-    outline: none;
-    font-family: quattrocento_sansitalic, Arial, sans-serif;
-    font-size: 12px;
-    padding-left: 20px; }
-  .about__subscribe button {
-    width: 91px;
-    height: 40px;
-    background-color: black;
-    border: none;
-    outline: none;
-    font-size: 12px;
-    color: white;
-    text-transform: uppercase;
-    margin-left: -3px;
-    cursor: pointer; }
-
-.about__posts {
-  max-width: 321px;
-  margin-top: 60px; }
-
-.about__posts-title {
-  position: relative; }
-
-.about__posts-title,
-.about__categories-title,
-.about__tags-title,
-.about__instagram {
-  font-family: rufina-bold-webfont, Arial, sans-serif;
-  font-size: 24px;
-  margin-bottom: 45px; }
-
-.about__posts-title::before,
-.about__categories-title::before,
-.about__tags-title::before,
-.about__instagram::before {
-  content: '';
-  position: absolute;
-  width: 322px;
-  height: 2px;
-  background-color: #c4c4c4;
-  top: 42px;
-  left: 0; }
-
-.about__link-categories {
-  font-family: quattrocento_sansitalic, Arial, sans-serif;
-  font-size: 12px;
-  color: #898989;
-  position: relative; }
-
-.about__link-categories::before {
-  content: '';
-  position: absolute;
-  width: 36px;
-  height: 2px;
-  background-color: #c4c4c4;
-  top: 14px;
-  left: 0; }
-
-.about__post-title a {
-  font-family: rufina-bold-webfont, Arial, sans-serif;
-  font-size: 16px;
-  color: black; }
-
-.about__time {
-  margin-top: 40px;
-  font-size: 13px;
-  margin-bottom: 45px; }
-  .about__time span {
-    color: #898989; }
-
-.about__instagram {
-  max-width: 321px;
-  position: relative;
-  margin-bottom: 45px; }
-  .about__instagram h3 {
-    margin-bottom: 45px; }
-
-.about__instagram-images {
+.platforms {
+  min-height: 722px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap; }
+  display: flex; }
 
-.about__categories {
-  max-width: 321px; }
-  .about__categories ul {
-    margin: 0;
-    padding: 0; }
-    .about__categories ul li {
-      padding-left: 10px;
-      list-style-type: none;
-      line-height: 34px; }
-      .about__categories ul li a {
-        color: black; }
-    .about__categories ul li:nth-child(even) {
-      background-color: #f7f7f7; }
+.platforms__text {
+  padding: 190px 150px;
+  width: 60%; }
+  .platforms__text h2 {
+    font-size: 40px;
+    color: #282828; }
+    .platforms__text h2 span {
+      color: #ff6d6d; }
 
-.about__categories-title {
-  position: relative; }
+.platforms__block {
+  width: 40%;
+  background: url("../img/triangle.jpg") no-repeat;
+  background-size: cover; }
 
-.about__blog {
-  max-width: 321px;
-  height: 399px;
-  background: url("../img/bg-blog.jpg") no-repeat;
-  text-align: center;
-  font-family: quattrocento_sansbold, Arial, sans-serif;
-  position: relative;
-  margin-bottom: 45px; }
-  .about__blog h3 {
-    padding-top: 150px;
-    font-size: 60px;
-    margin-bottom: 0; }
-  .about__blog p {
-    margin-top: 0;
-    font-size: 30px;
-    color: #636363; }
-
-.about__blog::after {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-bottom: 150px solid #ffc600;
-  border-right: 150px solid transparent;
-  bottom: 0;
-  left: 0; }
-
-.about__blog::before {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-top: 150px solid #ffc600;
-  border-left: 150px solid transparent;
-  top: 0;
-  right: 0; }
-
-.about__tags-title {
-  position: relative; }
-
-.about__tag {
-  color: #252525;
+.platforms__new {
   font-size: 16px;
-  line-height: 30px;
-  margin-right: 20px;
-  position: relative; }
+  color: #ff6d6d; }
 
-.about__tag::after {
-  content: '';
-  position: absolute;
-  width: 13px;
-  height: 26px;
-  background: url("../img/apsrf.png") no-repeat;
-  top: -3px;
-  right: -18px; }
+.platforms__par {
+  font-size: 16px;
+  color: #282828; }
 
 .page-content {
   margin-top: 185px;
