--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -1,5 +1,4 @@
 .header {
-  background: url("../img/bg.jpg") no-repeat;
   background-size: cover;
   min-height: 813px;
   display: flex;
@@ -23,6 +22,7 @@
   border: none;
   cursor: pointer;
   margin-bottom: 40px;
+  outline: none;
 }
 
 .header__play:hover {
@@ -56,4 +56,18 @@
   text-transform: none;
   top: 60px;
   left: -19px;
+}
+
+.is_overlay{
+  display: block;
+  width: 100%;
+  height: 110%;
+}
+.is_overlay video {
+  position: absolute;
+  right: 0;
+  min-width: 100%;
+  z-index: -100;
+  background: url(../img/bg.jpg) no-repeat;
+  background-size: cover;
 }
