--- a/sass/blocks/platforms.scss
+++ b/sass/blocks/platforms.scss
@@ -6,6 +6,9 @@
 .platforms__text {
   padding: 190px 150px;
   width: 60%;
+  position: relative;
+  background-color: #fff;
+  z-index: 100;
   h2 {
     font-size: 40px;
     color: #282828;
@@ -16,6 +19,7 @@
 }
 
 .platforms__block {
+  z-index: 100;
   width: 40%;
   background: url("../img/triangle.jpg") no-repeat;
   background-size: cover;
@@ -29,4 +33,5 @@
 .platforms__par {
   font-size: 16px;
   color: #282828;
+  line-height: 26px;
 }
