--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -1,9 +1,9 @@
 .header {
   background-size: cover;
-  min-height: 813px;
   display: flex;
   flex-direction: column;
   align-items: center;
+
 
   h1 {
     margin: 230px auto 55px;
@@ -40,6 +40,10 @@
   text-transform: uppercase;
   font-family: Exo-Regular, Arial, sans-serif;
   font-size: 16px;
+  margin-bottom: 136px;
+  @media (min-width: 1520px) {
+    margin-bottom: 255px;
+  }
 }
 
 .header__try:hover {
