--- a/sass/blocks/awesone.scss
+++ b/sass/blocks/awesone.scss
@@ -19,6 +19,7 @@
 .awesome__wrap {
   display: flex;
   justify-content: space-around;
+  padding: 0 20px;
   article {
     width: 286px;
     text-align: center;
