--- a/sass/blocks/awesone2.scss
+++ b/sass/blocks/awesone2.scss
@@ -9,7 +9,7 @@
   color: #282828;
   }
   p {
-    width: 655px;
+    max-width: 655px;
     margin: 0 auto;
     line-height: 26px;
     margin-bottom: 108px;
