--- a/sass/blocks/resposive-design.scss
+++ b/sass/blocks/resposive-design.scss
@@ -3,14 +3,16 @@
   background-size: cover;
   display: flex;
   justify-content: center;
-  padding: 93px 0 105px;
+  padding: 93px 20px 105px;
   z-index: 100;
   position: relative;
 }
 
 .resposive-design__text {
   width: 500px;
-  margin-left: 70px;
+  @media (min-width: 625px) {
+    margin-left: 70px;
+  }
   h2 {
     font-size: 40px;
     color: #282828;
@@ -32,5 +34,9 @@
 }
 
 .resposive-design__image {
-  margin-right: 70px;
+  display: none;
+  @media (min-width: 625px) {
+    display: block;
+    margin-right: 70px;
+  }
 }
